# RKDevelopTool-GUI

./: README.md  README.zh.md  build_nuitka.py  pyproject.toml
.github/workflows/: release.yml
packaging/: make-appimage.sh  nfpm.yaml
rkdeveloptool-gui/: themes.py
